[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/play_button_h.png" type="Texture" id=2]
[ext_resource path="res://assets/player_small.png" type="Texture" id=3]
[ext_resource path="res://assets/play_button.png" type="Texture" id=4]
[ext_resource path="res://assets/kenvector_future_thin.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 5 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 81.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 65.0

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_right = 1114.0
margin_bottom = 45.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="LivesCounter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 1118.0
margin_right = 1240.0
margin_bottom = 45.0

[node name="L1" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_right = 38.0
margin_bottom = 45.0
texture = ExtResource( 3 )

[node name="L2" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_left = 42.0
margin_right = 80.0
margin_bottom = 45.0
texture = ExtResource( 3 )

[node name="L3" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_left = 84.0
margin_right = 122.0
margin_bottom = 45.0
texture = ExtResource( 3 )

[node name="StartButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -32.5
margin_right = 124.5
margin_bottom = 32.5
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
